tests/test65.rael.exp
Error [tests/test65.rael:1:1]: Unrecognized token
| rael 69
| ^
